2026-02-11T02:23:15Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21890318524 # 874
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
* notice: next accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-21 2026-01-22 2026-01-23 2026-01-24 2026-01-25] / []

2026-02-09T02:09:57Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21809952280 # 872
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-09
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
* notice: next accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2026-02-08T02:32:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21790886128 # 871
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-08
* notice: last 14d: unq all: 0 0
* notice: prev accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
* notice: next accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2026-01-21 2026-01-22] / []

2026-02-07T01:58:55Z: