@@ -1,3 +1,12 @@
+2026-02-13T02:12:09Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21972006974 # 876
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-13
+* notice: last 14d: unq all: 0 0
+* notice: prev accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
+* notice: next accum: outdated-unq outdated-all / unq all: 143 391 / 143 391
+* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
+* notice: removed / changed dates: [2026-01-26 2026-01-27 2026-01-28] / []
+
 2026-02-11T02:23:15Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/21890318524 # 874
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-action--git-checkout--gh-stats/commits?branch=master&time_zone=utc&until=2026-02-11
